# BoilerInspector

./: .env  .env.example  .replit  README.md  app.py  budget-deployment-guide.md  cheap-deployment-summary.md  deployment-guide.md  package-lock.json  package.json  package.json.vercel  pyproject.toml  replit.md  step-by-step-cheap-deployment.md  vercel.json
attached_assets/: Pasted-PS-C-Users-shany-Documents-MyCursorAI-Cascade-sucscription-boiler-inspection-app-npm-run-build--1751524308301_1751524308303.txt  Pasted-PS-C-Users-shany-Documents-MyCursorAI-Cascade-sucscription-boiler-inspection-app-npm-run-build--1751526966950_1751526966951.txt  Pasted-PS-C-Users-shany-Documents-MyCursorAI-Cascade-sucscription-boiler-inspection-app-npm-run-build--1751527135115_1751527135116.txt  check1_1749810806377.md
client/src/: App.tsx  index.css
client/src/assets/fonts/: nanumGothic.ts
client/src/components/inspection/: ActionSheetModal.tsx  ChecklistSection.tsx  FloatingActionButtons.tsx  InspectionInfoSection.tsx  InstallationInfoSection.tsx  PhotoUploadSection.tsx  ProductListSection.tsx  ProgressIndicator.tsx
client/src/components/layout/: AppHeader.tsx  NavigationDrawer.tsx
client/src/components/ui/: toast-notification.tsx
client/src/hooks/: useDemoMode.ts
client/src/lib/: dateUtils.ts  fontLoader.ts  inspectionUtils.ts  pdfGenerator.ts  queryClient.ts
client/src/pages/: Home.tsx  InspectionHistory.tsx  InspectorManagement.tsx  Landing.tsx  NewInspection.tsx  SiteManagement.tsx
server/: routes.ts  storage.ts
shared/: schema-mysql.ts
static/: app.js  index.html
(+1 files in other folders)
