[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "flask-session>=0.8.0",
    "flask-sqlalchemy>=3.1.1",
    "pillow>=11.3.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.3",
    "requests>=2.32.4",
    "werkzeug>=3.1.3",
]
